# task_management_api

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: initial_migration.py
app/: main.py
app/api/: api.py  dependencies.py
app/api/endpoints/: tasks.py
app/core/: config.py
app/db/: base.py
app/models/: task.py
app/schemas/: task.py
app/services/: task.py
app/tasks/: worker.py
app/utils/: notifications.py
tests/: conftest.py  test_tasks.py
